==> nongxiaoming/DAPLinkTiny/Software/Firmware/boards/at32f425/drivers/drv_gpio.c <==
#include "drv_common.h"
#include "drv_gpio.h"
#define PIN_NUM(port, no)               (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin)                   ((uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin)                     ((uint8_t)((pin) & 0xFu))
#define PIN_ATPORTSOURCE(pin)           (scfg_port_source_type)((uint8_t)(((pin) & 0xF0u) >> 4))
#define PIN_ATPINSOURCE(pin)            (scfg_pins_source_type)((uint8_t)((pin) & 0xFu))
#define PIN_ATPORTSOURCE(pin)           (gpio_port_source_type)((uint8_t)(((pin) & 0xF0u) >> 4))
#define PIN_ATPINSOURCE(pin)            (gpio_pins_source_type)((uint8_t)((pin) & 0xFu))
#define PIN_ATPORT(pin)                 ((gpio_type *)(GPIOA_BASE + (0x400u * PIN_PORT(pin))))
#define PIN_ATPIN(pin)                  ((uint16_t)(1u << PIN_NO(pin)))
    #define __AT32_PORT_MAX 12u
    #define __AT32_PORT_MAX 11u
    #define __AT32_PORT_MAX 10u
    #define __AT32_PORT_MAX 9u
    #define __AT32_PORT_MAX 8u
    #define __AT32_PORT_MAX 7u
    #define __AT32_PORT_MAX 6u
    #define __AT32_PORT_MAX 5u
    #define __AT32_PORT_MAX 4u
    #define __AT32_PORT_MAX 3u
    #define __AT32_PORT_MAX 2u
    #define __AT32_PORT_MAX 1u
    #define __AT32_PORT_MAX 0u
#define PIN_ATPORT_MAX __AT32_PORT_MAX
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

int rt_hw_pin_init(void)
{

#ifdef GPIOA
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOB
    crm_periph_clock_enable(CRM_GPIOB_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOC
    crm_periph_clock_enable(CRM_GPIOC_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOD
    crm_periph_clock_enable(CRM_GPIOD_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOE
    crm_periph_clock_enable(CRM_GPIOE_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOF
    crm_periph_clock_enable(CRM_GPIOF_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOG
    crm_periph_clock_enable(CRM_GPIOG_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOH
    crm_periph_clock_enable(CRM_GPIOH_PERIPH_CLOCK, TRUE);
#endif

#if defined (SOC_SERIES_AT32F435) || defined (SOC_SERIES_AT32F437) || \
    defined (SOC_SERIES_AT32F421) || defined (SOC_SERIES_AT32F425) || \
    defined (SOC_SERIES_AT32F423)
    crm_periph_clock_enable(CRM_SCFG_PERIPH_CLOCK, TRUE);
#else
    crm_periph_clock_enable(CRM_IOMUX_PERIPH_CLOCK, TRUE);
#endif

    return rt_device_pin_register("pin", &_at32_pin_ops, RT_NULL);
}
