==> nongxiaoming/DAPLinkTiny/Software/Firmware/boards/ft32f072xb/Drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define PIN_NUM(port, no) (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin) ((uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin) ((uint8_t)((pin) & 0xFu))
#define PIN_FTPORT(pin) ((GPIO_TypeDef *)(GPIOA_BASE +(0x400u * PIN_PORT(pin))))
#define PIN_FTPIN(pin) ((uint16_t)(1u << PIN_NO(pin)))
    #define __FT32_PORT_MAX 6u
    #define __FT32_PORT_MAX 5u
    #define __FT32_PORT_MAX 4u
    #define __FT32_PORT_MAX 3u
    #define __FT32_PORT_MAX 2u
    #define __FT32_PORT_MAX 1u
    #define __FT32_PORT_MAX 0u
#define PIN_STPORT_MAX __FT32_PORT_MAX
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

int rt_hw_pin_init(void)
{
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE);
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOC, ENABLE);
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOD, ENABLE);
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOF, ENABLE);
    return rt_device_pin_register("pin", &_ft32_pin_ops, RT_NULL);
}
